Bug 1612207 - SourceSurfaceCapture::IsValid should validate any underlying surfaces. r=jrmuizel

SourceSurfaceCapture can contain an underlying surface instead of a set
of drawing commands. The surface has its own valid state, and must be
checked by the parent in SourceSurfaceCapture::IsValid. If we don't,
then we may end up failing silently while drawing, and images will go
missing. The underlying surface can be invalidated by a device reset if
it is a SourceSurfaceD2D1, as an example.

Differential Revision: https://phabricator.services.mozilla.com/D61245

--HG--
extra : moz-landing-system : lando